--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "npx nodemon app"
+    "start": "node app.js",
+    "build": ""
   },
   "author": "",
   "license": "ISC",
